Adding a way to remove the link template imported
When a template is rendered, Polymer.Base.importHref add the appropriate link in document.head, but when the template is removed from the view the import link is not removed and it is added again and again. This change fixes the problem.

--- a/dna-router-behaviors.html
+++ b/dna-router-behaviors.html
@@ -294,8 +294,16 @@
 		    }
 		},
 		_pageLeave: function(){
-	        this.removeAttribute('active')
-	        this.innerHTML = ''
+			if(this.element){
+				var element = this.element;
+				var template = config.template + this.template;
+	        	var file = '/'+element.toCamelCase()+'.html';
+	        	template +=file;
+	        	var rLink = document.head.querySelector('link[href="' + template + '"]');
+	        	rLink.parentElement.removeChild(rLink);
+			}
+      this.removeAttribute('active')
+      this.innerHTML = ''
 		},
 	};
 
